2009-09-30  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: do not lock packages while iterating over them
	* constsym.d, subr.d (package_iterate_cleanup): remove
	* defs1.lisp (with-package-iterator): roll back changes from 2009-08-28
	(package-iterator-function): ditto
	* package.d: remove extra (LOCKED) field from Package Iterator State
	(PACKAGE-ITERATE): do not lock current package
	(PACKAGE-ITERATE-CLEANUP): remove
	(MAP-SYMBOLS, MAP-EXTERNAL-SYMBOLS): do not lock packages. symtabs have
	"copy-on-rehash" semantics and insertion/deletion is segfaul safe
	(MAP-ALL-SYMBOLS): do not lock individual packages. make a copy of all
	packages list and iterate over it
	* constobj.d (version): revert to old ABI
	* loop.lisp (expand-loop): do not use WRAP-UNWIND-PROTECT when iterating
	over packages

2009-09-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (symbol_value_b): fix MT g++ build

2009-09-29  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out_level): extract from nobject_out

2009-09-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2868147 ]: declaim signals an error on an invalid declaration
	* compiler.lisp (parse-optimize-quality): can be called by DECLAIM,
	so call c-WARN or WARN depending on *COMPILING*

2009-09-27  Bruno Haible  <bruno@clisp.org>

	* m4/connect.m4 (CL_CONNECT): Terminate the expansion with a newline.

2009-09-26  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: fix thread safety issue in printer
	* lispbibl.d (Symbol_thread_binding): returns symbol binding in current
	thread (if any)
	* io.d (pr_external_1, BIND_UNLESS): use it

2009-09-26  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (intern) [MULTITHREAD]: search for symbol before locking
	package (it's faster)

2009-09-25  Aleksej Saushev  <asau@inbox.ru>

	* makemake.in (BUILD_AUX): do not link_dep if building in src to
	avoid cyclic dependency

2009-09-25  Sam Steingold  <sds@gnu.org>
